[package]
name = "wbtools"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]

[dependencies]
crc = "^1.0.0"
getopts = "0.2"
byteorder = "1"

[[bin]]
name = "wbcheck"
path = "src/wbcheck/main.rs"

[[bin]]
name = "wbmeta"
path = "src/wbmeta/main.rs"

[[bin]]
name = "wbstatus"
path = "src/wbstatus/main.rs"

[[bin]]
name = "wbdump"
path = "src/wbdump/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"
